// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Nav/Projects Dropdown List With only invitations 1`] = `
.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c13 svg + span {
  margin-left: 4px;
}

.c16 {
  color: #353535;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c16:not([disabled]):hover,
.c16:not([disabled]):focus {
  color: #0d79d0;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c16:not([disabled]):active {
  color: #0d79d0;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c14 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c14:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c20 {
  border: none;
  color: #353535;
  padding: 0;
}

.c20 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.c12 path {
  fill: #0d79d0;
}

.c12:hover path {
  fill: #0d79d0;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c21 {
  font-size: 14px;
  text-overflow: ellipsis;
}

.c21 svg {
  max-height: 28px;
  max-width: 28px;
}

.c21 svg {
  margin: 0;
}

.c21 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c21:focus svg path:first-of-type,
.c21:hover svg path:first-of-type {
  fill: #f7b314;
}

.c22 {
  padding-left: 12px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  -webkit-letter-spacing: -0.3px;
  -moz-letter-spacing: -0.3px;
  -ms-letter-spacing: -0.3px;
  letter-spacing: -0.3px;
  color: #6e6e6e;
  clear: both;
  margin-top: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  color: #353535;
  pointer-events: unset;
}

.c1:hover,
.c1:hover .Dropdown__PlaceholderTitle-fhxyb7-2 {
  background: #f2fbfc;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  color: #353535;
  pointer-events: unset;
  cursor: pointer;
}

.c5:hover,
.c5:hover .Dropdown__PlaceholderTitle-fhxyb7-2 {
  background: #f2fbfc;
}

.c5:hover .user-icon-path {
  fill: #fff;
}

.c4 {
  height: 1px;
  width: 100%;
  opacity: 0.23;
  background-color: #bce7f6;
}

.c19 {
  padding: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

.c7 {
  display: grid;
  padding-left: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  line-height: 1;
  font-size: 14px;
  margin-bottom: 4px;
}

.c17 {
  line-height: 1;
  font-size: 14px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 6px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  height: 20px;
}

.c18 {
  overflow: auto;
}

<div
  className="c0"
>
  <div>
    <a
      aria-current={null}
      className="c1"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="c4"
    />
    <div
      className="c5"
    >
      <div
        className="c2"
      >
        <div
          className="c6"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="c7"
        >
          <div />
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              Invited by
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <svg
                  className="c12"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c7"
      >
        <button
          className="c13 c14 c15"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="c13 c16 c17"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c2"
      >
        <div
          className="c6"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="c7"
        >
          <div />
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              Invited by
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <svg
                  className="c12"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c7"
      >
        <button
          className="c13 c14 c15"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="c13 c16 c17"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="c18"
    />
    <div
      className="c19"
    >
      <button
        className="c13 c20 c21"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="c22"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Nav/Projects Dropdown List With projects 1`] = `
.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c9 svg + span {
  margin-left: 4px;
}

.c10 {
  border: none;
  color: #353535;
  padding: 0;
}

.c10 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c11 {
  font-size: 14px;
  text-overflow: ellipsis;
}

.c11 svg {
  max-height: 28px;
  max-width: 28px;
}

.c11 svg {
  margin: 0;
}

.c11 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c11:focus svg path:first-of-type,
.c11:hover svg path:first-of-type {
  fill: #f7b314;
}

.c12 {
  padding-left: 12px;
}

.c7 {
  color: #6e6e6e;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  color: #353535;
  pointer-events: unset;
}

.c1:hover,
.c1:hover .c6 {
  background: #f2fbfc;
}

.c4 {
  height: 1px;
  width: 100%;
  opacity: 0.23;
  background-color: #bce7f6;
}

.c8 {
  padding: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  overflow: auto;
}

<div
  className="c0"
>
  <div>
    <a
      aria-current={null}
      className="c1"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="c4"
    />
    <div
      className="c5"
    >
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-3"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div
            className="c6 c7"
          />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-1"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-2"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
    </div>
    <div
      className="c4"
    />
    <div
      className="c8"
    >
      <button
        className="c9 c10 c11"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="c12"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Nav/Projects Dropdown List With projects and invitations 1`] = `
.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c13 svg + span {
  margin-left: 4px;
}

.c16 {
  color: #353535;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c16:not([disabled]):hover,
.c16:not([disabled]):focus {
  color: #0d79d0;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c16:not([disabled]):active {
  color: #0d79d0;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c14 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c14:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c22 {
  border: none;
  color: #353535;
  padding: 0;
}

.c22 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.c12 path {
  fill: #0d79d0;
}

.c12:hover path {
  fill: #0d79d0;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c23 {
  font-size: 14px;
  text-overflow: ellipsis;
}

.c23 svg {
  max-height: 28px;
  max-width: 28px;
}

.c23 svg {
  margin: 0;
}

.c23 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c23:focus svg path:first-of-type,
.c23:hover svg path:first-of-type {
  fill: #f7b314;
}

.c24 {
  padding-left: 12px;
}

.c20 {
  color: #6e6e6e;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  -webkit-letter-spacing: -0.3px;
  -moz-letter-spacing: -0.3px;
  -ms-letter-spacing: -0.3px;
  letter-spacing: -0.3px;
  color: #6e6e6e;
  clear: both;
  margin-top: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  color: #353535;
  pointer-events: unset;
}

.c1:hover,
.c1:hover .c19 {
  background: #f2fbfc;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  color: #353535;
  pointer-events: unset;
  cursor: pointer;
}

.c5:hover,
.c5:hover .c19 {
  background: #f2fbfc;
}

.c5:hover .user-icon-path {
  fill: #fff;
}

.c4 {
  height: 1px;
  width: 100%;
  opacity: 0.23;
  background-color: #bce7f6;
}

.c21 {
  padding: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

.c7 {
  display: grid;
  padding-left: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  line-height: 1;
  font-size: 14px;
  margin-bottom: 4px;
}

.c17 {
  line-height: 1;
  font-size: 14px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 6px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  height: 20px;
}

.c18 {
  overflow: auto;
}

<div
  className="c0"
>
  <div>
    <a
      aria-current={null}
      className="c1"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="c4"
    />
    <div
      className="c5"
    >
      <div
        className="c2"
      >
        <div
          className="c6"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="c7"
        >
          <div />
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              Invited by
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <svg
                  className="c12"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c7"
      >
        <button
          className="c13 c14 c15"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="c13 c16 c17"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c2"
      >
        <div
          className="c6"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="c7"
        >
          <div />
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              Invited by
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <svg
                  className="c12"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c7"
      >
        <button
          className="c13 c14 c15"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="c13 c16 c17"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="c18"
    >
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-3"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div
            className="c19 c20"
          />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-1"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-2"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
    </div>
    <div
      className="c4"
    />
    <div
      className="c21"
    >
      <button
        className="c13 c22 c23"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="c24"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Nav/Projects Dropdown List With rejected invitations 1`] = `
.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c13 svg + span {
  margin-left: 4px;
}

.c16 {
  color: #353535;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c16:not([disabled]):hover,
.c16:not([disabled]):focus {
  color: #0d79d0;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c16:not([disabled]):active {
  color: #0d79d0;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c14 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c14:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c22 {
  border: none;
  color: #353535;
  padding: 0;
}

.c22 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.c12 path {
  fill: #0d79d0;
}

.c12:hover path {
  fill: #0d79d0;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c23 {
  font-size: 14px;
  text-overflow: ellipsis;
}

.c23 svg {
  max-height: 28px;
  max-width: 28px;
}

.c23 svg {
  margin: 0;
}

.c23 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c23:focus svg path:first-of-type,
.c23:hover svg path:first-of-type {
  fill: #f7b314;
}

.c24 {
  padding-left: 12px;
}

.c20 {
  color: #6e6e6e;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 14px;
  -webkit-letter-spacing: -0.3px;
  -moz-letter-spacing: -0.3px;
  -ms-letter-spacing: -0.3px;
  letter-spacing: -0.3px;
  color: #6e6e6e;
  clear: both;
  margin-top: 8px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  color: #353535;
  pointer-events: unset;
}

.c1:hover,
.c1:hover .c19 {
  background: #f2fbfc;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  color: #353535;
  pointer-events: unset;
  cursor: pointer;
}

.c5:hover,
.c5:hover .c19 {
  background: #f2fbfc;
}

.c5:hover .user-icon-path {
  fill: #fff;
}

.c4 {
  height: 1px;
  width: 100%;
  opacity: 0.23;
  background-color: #bce7f6;
}

.c21 {
  padding: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

.c7 {
  display: grid;
  padding-left: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  line-height: 1;
  font-size: 14px;
  margin-bottom: 4px;
}

.c17 {
  line-height: 1;
  font-size: 14px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 6px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  height: 20px;
}

.c18 {
  overflow: auto;
}

<div
  className="c0"
>
  <div>
    <a
      aria-current={null}
      className="c1"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="c4"
    />
    <div
      className="c5"
    >
      <div
        className="c2"
      >
        <div
          className="c6"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="c7"
        >
          <div />
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              Invited by
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <svg
                  className="c12"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c7"
      >
        <button
          className="c13 c14 c15"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="c13 c16 c17"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="c5"
    >
      <div
        className="c2"
      >
        <div
          className="c6"
        >
          <svg
            color="#0d79d0"
            height={26}
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <g
                stroke="#7FB5D5"
                transform="translate(3 9)"
              >
                <rect
                  fill="#FFF"
                  height={15.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={13.5}
                  x={-0.75}
                  y={-0.75}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={4}
                  x={2.5}
                  y={2.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={6.5}
                />
                <rect
                  height={1}
                  rx={0.5}
                  width={7}
                  x={2.5}
                  y={10.5}
                />
              </g>
              <circle
                cx={17}
                cy={7}
                fill="#FFF"
                fillRule="nonzero"
                r={7}
              />
              <g
                fillRule="nonzero"
                transform="translate(11 1)"
              >
                <circle
                  cx={6}
                  cy={6}
                  fill="#80BE86"
                  r={6}
                />
                <circle
                  cx={6}
                  cy={9}
                  fill="#FFF"
                  r={1}
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
                <path
                  className="user-icon-path"
                  d="M5.875 2.5c.207 0 .375.168.375.375v3.25a.375.375 0 1 1-.75 0v-3.25c0-.207.168-.375.375-.375z"
                  fill="#FFF"
                  stroke="#FFF"
                  strokeWidth={0.5}
                />
              </g>
            </g>
          </svg>
        </div>
        <div
          className="c7"
        >
          <div />
          <div
            className="c8"
          >
            <div
              className="c9"
            >
              Invited by
            </div>
            <div
              className="c10"
            >
              <div
                className="c11"
              >
                <svg
                  className="c12"
                  color="#0d79d0"
                  height={20}
                  viewBox="0 0 34 34"
                  width={20}
                >
                  <path
                    d="M17 1c8.837 0 16 7.163 16 16s-7.163 16-16 16S1 25.837 1 17 8.163 1 17 1zm0 17.585a9.341 9.341 0 00-9.324 9.905A14.737 14.737 0 0017 31.797a14.74 14.74 0 009.324-3.306A9.341 9.341 0 0017 18.586zm0-16.382C8.828 2.203 2.203 8.828 2.203 17c0 4.03 1.612 7.685 4.226 10.354.243-4.575 3.391-8.378 7.633-9.601a5.605 5.605 0 115.876.001c4.242 1.222 7.39 5.025 7.633 9.6A14.75 14.75 0 0031.797 17c0-8.172-6.625-14.797-14.797-14.797zm0 6.418a4.36 4.36 0 100 8.719 4.36 4.36 0 000-8.719z"
                    fill="#6E6E6E"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c7"
      >
        <button
          className="c13 c14 c15"
          onClick={[Function]}
          type="button"
        >
          Accept
        </button>
        <button
          className="c13 c16 c17"
          onClick={[Function]}
          type="button"
        >
          Reject
        </button>
      </div>
    </div>
    <div
      className="c18"
    >
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-3"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div
            className="c19 c20"
          />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-1"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-2"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
    </div>
    <div
      className="c4"
    />
    <div
      className="c21"
    >
      <button
        className="c13 c22 c23"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="c24"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Nav/Projects Dropdown List Without projects 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c4 {
  border: none;
  color: #353535;
  padding: 0;
}

.c4 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c5 {
  font-size: 14px;
  text-overflow: ellipsis;
}

.c5 svg {
  max-height: 28px;
  max-width: 28px;
}

.c5 svg {
  margin: 0;
}

.c5 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c5:focus svg path:first-of-type,
.c5:hover svg path:first-of-type {
  fill: #f7b314;
}

.c6 {
  padding-left: 12px;
}

.c2 {
  padding: 12px;
}

.c1 {
  overflow: auto;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    />
    <div
      className="c2"
    >
      <button
        className="c3 c4 c5"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="c6"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;
